# find-publiccode.yml

./: .gitignore  AGENTS.md  ANALYSIS_REPORT.md  COMPLIANCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTI_FORMAT_SUPPORT.md  README.md  SBOM.md  TERMINAL_OUTPUT.md  USAGE.md  WWW_VARIANT_UPDATE.md  config.py  crawler.py  main.py  pyproject.toml  requirements.txt  results.py  setup.sh  test_formats.py  test_validation.py  utils.py  validator.py
tests/: test_crawler.py  test_results.py  test_utils.py  test_validator.py
